js/js.translator/testData/incremental/invalidation/interfaceSuperUsage/lib1/ClassB.0.kt
class ClassB : Interface {
    override var someVar: Int?
        get() = super.someVar
        set(konstue) {
            super.someVar = konstue
        }

    konst x = 1
}
